Fix non-coloured top and bottom prices to align them better

--- a/styles/board.css
+++ b/styles/board.css
@@ -142,7 +142,7 @@ body {
 #bottomRow2Price {
     font-size: 12px;
     position: relative;
-    top: 79px;
+    top: 81px;
     text-align: center;
     word-break: break-all;
 }
@@ -192,7 +192,7 @@ body {
 #bottomRow4Price {
     font-size: 12px;
     position: relative;
-    top: 79px;
+    top: 81px;
     text-align: center;
     word-break: break-all;
 }
@@ -217,7 +217,7 @@ body {
 #bottomRow5Price {
     font-size: 12px;
     position: relative;
-    top: 79px;
+    top: 81px;
     text-align: center;
     word-break: break-all;
 }
@@ -705,7 +705,7 @@ body {
 #topRow5Price {
     font-size: 12px;
     position: relative;
-    top: 79px;
+    top: 81px;
     text-align: center;
     word-break: break-all;
 }
@@ -780,7 +780,7 @@ body {
 #topRow8Price {
     font-size: 12px;
     position: relative;
-    top: 79px;
+    top: 81px;
     text-align: center;
     word-break: break-all;
 }
